fix(menu): correct display property and add overflow for improved layout AB#1517195

--- a/components/menu/src/styles/default/style-menu.scss
+++ b/components/menu/src/styles/default/style-menu.scss
@@ -14,9 +14,9 @@
 
 // container styles - defines the look of the outer custom component
 :host {
-  display: block;
-  vertical-align: middle;
+  display: display;
   line-height: 0; // prevents page from jumping when menu options are selected at the end of the list.
+  overflow-y: auto;
 
   .menuWrapper {
     box-sizing: border-box;
